error
my_fae.c: In function ‘newFAE_Value’:
my_fae.c:37:5: error: conversion to non-scalar type requested
   37 |     FAE_Value new = (FAE_Value)calloc(1, sizeof(FAE_Value_t));
      |     ^~~~~~~~~
In file included from my_fae.c:7:
my_fae.c:38:5: error: used struct type value where scalar is required
   38 |     assert(new);
      |     ^~~~~~
my_fae.c:38:12: error: used struct type value where scalar is required
   38 |     assert(new);
      |            ^~~
my_fae.c: In function ‘newDefrdSub’:
my_fae.c:53:5: error: ‘ds’ undeclared (first use in this function)
   53 |     ds->type = MTSUB_T;
      |     ^~
my_fae.c:53:5: note: each undeclared identifier is reported only once for each function it appears in
my_fae.c: In function ‘calc_arith’:
my_fae.c:375:9: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  375 |     node->type == NUMV_T;
      |         ^~
my_fae.c:378:21: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  378 |         sprintf(node->data, "%d", num1 + num2);
      |                     ^~
my_fae.c:380:21: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  380 |         sprintf(node->data, "%d", num1 - num2);
      |                     ^~
my_fae.c:386:9: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  386 |     node->body = 0x0;
      |         ^~
my_fae.c:387:9: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  387 |     node->ds = 0x0;
      |         ^~
In file included from my_fae.c:11:
my_fae.c: In function ‘FAEinterp’:
my_fae.h:14:16: error: expected identifier before numeric constant
   14 | #define NUMV_T 0
      |                ^
my_fae.c:420:18: note: in expansion of macro ‘NUMV_T’
  420 |             ret->NUMV_T;
      |                  ^~~~~~
my_fae.c:421:23: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  421 |             strcpy(ret->data, fae->data);
      |                       ^~
my_fae.c:422:16: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  422 |             ret->body = 0x0;
      |                ^~
my_fae.c:423:16: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  423 |             ret->ds = 0x0;
      |                ^~
my_fae.c:429:29: error: ‘struct _FAE_t’ has no member named ‘value’
  429 |             ret = lookup(fae->value, ds);
      |                             ^~
my_fae.c:435:13: error: ‘calc_result’ undeclared (first use in this function)
  435 |             calc_result = calc_arith(ADD_T, FAEinterp(fae->arg1, ds), FAEinterp(fae->arg2, ds));
      |             ^~~~~~~~~~~
my_fae.c:435:45: error: incompatible type for argument 2 of ‘calc_arith’
  435 |             calc_result = calc_arith(ADD_T, FAEinterp(fae->arg1, ds), FAEinterp(fae->arg2, ds));
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                             |
      |                                             FAE_Value {aka struct _FAE_Value_t}
my_fae.c:369:24: note: expected ‘FAE’ {aka ‘struct _FAE_t *’} but argument is of type ‘FAE_Value’ {aka ‘struct _FAE_Value_t’}
  369 | calc_arith(int op, FAE lhs, FAE rhs){
      |                    ~~~~^~~
my_fae.c:435:71: error: incompatible type for argument 3 of ‘calc_arith’
  435 |             calc_result = calc_arith(ADD_T, FAEinterp(fae->arg1, ds), FAEinterp(fae->arg2, ds));
      |                                                                       ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                       |
      |                                                                       FAE_Value {aka struct _FAE_Value_t}
my_fae.c:369:33: note: expected ‘FAE’ {aka ‘struct _FAE_t *’} but argument is of type ‘FAE_Value’ {aka ‘struct _FAE_Value_t’}
  369 | calc_arith(int op, FAE lhs, FAE rhs){
      |                             ~~~~^~~
my_fae.c:442:37: error: incompatible type for argument 2 of ‘calc_arith’
  442 |             ret = calc_arith(SUB_T, FAEinterp(fae->arg1, ds), FAEinterp(fae->arg2, ds));
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                     |
      |                                     FAE_Value {aka struct _FAE_Value_t}
my_fae.c:369:24: note: expected ‘FAE’ {aka ‘struct _FAE_t *’} but argument is of type ‘FAE_Value’ {aka ‘struct _FAE_Value_t’}
  369 | calc_arith(int op, FAE lhs, FAE rhs){
      |                    ~~~~^~~
my_fae.c:442:63: error: incompatible type for argument 3 of ‘calc_arith’
  442 |             ret = calc_arith(SUB_T, FAEinterp(fae->arg1, ds), FAEinterp(fae->arg2, ds));
      |                                                               ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                                               |
      |                                                               FAE_Value {aka struct _FAE_Value_t}
my_fae.c:369:33: note: expected ‘FAE’ {aka ‘struct _FAE_t *’} but argument is of type ‘FAE_Value’ {aka ‘struct _FAE_Value_t’}
  369 | calc_arith(int op, FAE lhs, FAE rhs){
      |                             ~~~~^~~
In file included from my_fae.c:11:
my_fae.h:15:20: error: expected identifier before numeric constant
   15 | #define CLOSUREV_T 1
      |                    ^
my_fae.c:448:18: note: in expansion of macro ‘CLOSUREV_T’
  448 |             ret->CLOSUREV_T;
      |                  ^~~~~~~~~~
my_fae.c:449:23: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  449 |             strcpy(ret->data, fae->data);
      |                       ^~
my_fae.c:450:16: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  450 |             ret->body = fae->arg1;
      |                ^~
my_fae.c:451:16: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  451 |             ret->ds = ds;
      |                ^~
my_fae.c:461:32: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  461 |             FAE cV_body = f_val->body;
      |                                ^~
my_fae.c:462:35: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  462 |             char* cV_param = f_val->data;
      |                                   ^~
my_fae.c:463:35: error: invalid type argument of ‘->’ (have ‘FAE_Value’ {aka ‘struct _FAE_Value_t’})
  463 |             DefrdSub cV_ds = f_val->ds;
      |                                   ^~
my_fae.c: In function ‘main’:
my_fae.c:527:5: error: unknown type name ‘DefredSub’; did you mean ‘DefrdSub’?
  527 |     DefredSub ds = newDefrdSub();
      |     ^~~~~~~~~
      |     DefrdSub
my_fae.c:527:20: warning: initialization of ‘int’ from ‘DefrdSub’ {aka ‘struct _DefrdSub_t *’} makes integer from pointer without a cast [-Wint-conversion]
  527 |     DefredSub ds = newDefrdSub();
      |                    ^~~~~~~~~~~
my_fae.c:534:38: warning: passing argument 2 of ‘FAEinterp’ makes pointer from integer without a cast [-Wint-conversion]
  534 |         FAE result = FAEinterp(root, ds);
      |                                      ^~
      |                                      |
      |                                      int
my_fae.c:409:29: note: expected ‘DefrdSub’ {aka ‘struct _DefrdSub_t *’} but argument is of type ‘int’
  409 | FAEinterp(FAE fae, DefrdSub ds){
      |                    ~~~~~~~~~^~
my_fae.c:534:22: error: incompatible types when initializing type ‘FAE’ {aka ‘struct _FAE_t *’} using type ‘FAE_Value’ {aka ‘struct _FAE_Value_t’}
  534 |         FAE result = FAEinterp(root, ds);
      |                      ^~~~~~~~~
my_fae.c:541:38: warning: passing argument 2 of ‘FAEinterp’ makes pointer from integer without a cast [-Wint-conversion]
  541 |         FAE result = FAEinterp(root, ds);
      |                                      ^~
      |                                      |
      |                                      int
my_fae.c:409:29: note: expected ‘DefrdSub’ {aka ‘struct _DefrdSub_t *’} but argument is of type ‘int’
  409 | FAEinterp(FAE fae, DefrdSub ds){
      |                    ~~~~~~~~~^~
my_fae.c:541:22: error: incompatible types when initializing type ‘FAE’ {aka ‘struct _FAE_t *’} using type ‘FAE_Value’ {aka ‘struct _FAE_Value_t’}
  541 |         FAE result = FAEinterp(root, ds);
      |                      ^~~~~~~~~
make: *** [Makefile:14: FAE] Error 1
